# loca

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main0.c
include/: cell.h  coord.h  field.h  life.h  matrix.h  options.h
src/: cell.cpp  cell_test.cpp  life.cpp  matrix_test.cpp  options.cpp
